--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@account-kit/core": "^4.79.0",
+    "@account-kit/infra": "^4.79.0",
     "@account-kit/react": "^4.62.2",
     "@tanstack/react-query": "^5.87.4",
     "dotenv": "^17.2.2",
