--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@account-kit/core": "^4.79.0",
     "@account-kit/infra": "^4.79.0",
     "@account-kit/react": "^4.62.2",
+    "@account-kit/signer": "^4.81.2",
     "@tanstack/react-query": "^5.87.4",
+    "axios": "^1.13.2",
     "dotenv": "^17.2.2",
     "next": "15.5.3",
     "react": "19.1.0",
